--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@
 .DS_Store
 /build
 /captures
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
