--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ apply plugin: 'com.android.application'
 
 repositories {
     jcenter()
+    maven {url "https://jitpack.io"}
 }
 
 android {
@@ -32,6 +33,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.4'
+    androidTestCompile 'junit:junit:4.12'
 }
